# rin-json-patch

./: LICENSE  README.md  makefile  pyproject.toml
src/rin/jsonutils/: __init__.py  _coder_switch.py  advanced_json_encoder.py  resolvers.py  typing.py
tests/: test_readme.py
tests/units/: conftest.py  test_json.py
