[build-system]
requires = [
    "setuptools",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "NAME"
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=PYTHON_VERSION"
keywords = []
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "DEPENDENCIES"
]

[project.optional-dependencies]
NAME = ["PROJECTS"]

[project.scripts]
my-script = "my_package.module:function"

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_package*"]
exclude = ["my_package.tests*"]
namespaces = false