[build-system]
requires = [
    "setuptools",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "rin-jsonutils"
version = "1.0.2"
urls = {GitHub = "https://github.com/susautw/rin-jsonutils"}
description = "Add custom JSON coders and provide functions to set and get the default json coders"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["json", "utils"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
numpy = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true